--- a/src/main/resources/templates/loginForm.html
+++ b/src/main/resources/templates/loginForm.html
@@ -2,24 +2,80 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
     <title>Login</title>
 </head>
 <body>
-<h1>로그인 페이지</h1>
 
-<form action="/login" method="post">
-    <input type="text" name="username" placeholder="Username"> <br>
-    <input type="password" name="password" placeholder="Password"> <br>
-    <button type="submit">로그인</button>
-</form>
 
-<br>
+<div id="wrapper" style="text-align: center;">
 
-<a href="/oauth2/authorization/google">Google Login</a>
+    <div id="header" class="header" style="text-align: center; margin-bottom: 20px;">
+        <h1 style="font-size: 66px;">로그인 페이지</h1>
+    </div>
 
-<br>
 
-<a href="/joinForm">회원가입을 하지 않으셨나요?</a>
+    <div style="display: flex; margin-bottom: 80px;">
+        <div style="width: 30%;"></div>
+        <div style="width: 40%; height: auto; text-align: center">
 
+            <form action="/login" method="post">
+
+                <div class="mb-3">
+                    <label for="exampleInputEmail1" class="form-label">Username</label>
+                    <input type="text" name="username" class="form-control" id="exampleInputEmail1"
+                           aria-describedby="emailHelp">
+                    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                </div>
+
+                <div class="mb-3">
+                    <label for="exampleInputPassword1" class="form-label">Password</label>
+                    <input type="password" name="password" class="form-control" id="exampleInputPassword1">
+                </div>
+
+                <button type="submit" class="btn btn-primary">로그인</button>
+            </form>
+        </div>
+        <div style="width: 30%;"></div>
+    </div>
+
+
+    <div style="display: flex; width: 100%">
+        <div style="width: 20%;"></div>
+
+        <div style="width: 60%;">
+
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">구글 회원가입</h5>
+                    <p class="card-text">구글 계정이 있으신가요?</p>
+                    <a href="/oauth2/authorization/google" class="btn btn-primary stretched-link">GOOGLE</a>
+                </div>
+            </div>
+
+            <div class="card" style="">
+                <div class="card-body">
+                    <h5 class="card-title">네이버 회원가입</h5>
+                    <p class="card-text">네이버 계정이 있으신가요?</p>
+                    <a href="/oauth2/authorization/naver" class="btn btn-primary stretched-link">NAVER</a>
+                </div>
+            </div>
+
+            <div class="card" style="">
+                <div class="card-body">
+                    <h5 class="card-title">기본 회원가입</h5>
+                    <p class="card-text">회원가입을 하지 않으셨나요?</p>
+                    <a href="/joinForm" class="btn btn-primary stretched-link">회원가입</a>
+                </div>
+            </div>
+        </div>
+
+        <div style="width: 20%;"></div>
+    </div>
+
+
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
